# BugBuster

./: .claudeignore  .gitignore  .gitmodules  ARCHITECTURE.md  Analog.SchDoc  BugBuster.PrjPcb  BugBuster.PrjPcbStructure  CHANGELOG.MD  ESP32.SchDoc  IOs.SchDoc  Power.SchDoc  README.md  USB.SchDoc  knowledge.md  mypy_out.txt  pytest_out.txt  ruff_out.txt  test_dedup  test_dedup.rs  test_empty_bug.rs  test_hat_verify.py  test_la_bug  test_la_bug.rs
.claude/: settings.local.json
.github/workflows/: desktop-release.yml  esp32-firmware.yml  proto-version-check.yml  release.yml  rp2040-firmware.yml
DesktopApp/BugBuster/: .gitignore  Cargo.toml  README.md  index.html  setup_and_build_linux.sh  styles.css
DesktopApp/BugBuster/scripts/: desktop_version.py
DesktopApp/BugBuster/src/: app.rs  main.rs  tauri_bridge.rs
DesktopApp/BugBuster/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
DesktopApp/BugBuster/src-tauri/icons/: icon.icns
DesktopApp/BugBuster/src-tauri/src/: bbp.rs  commands.rs  connection_manager.rs  discovery.rs  http_transport.rs  la_commands.rs  la_integration_tests.rs  la_store.rs  la_store_tests.rs  la_transport.rs  la_usb.rs  lib.rs  main.rs  state.rs  transport.rs  usb_transport.rs  wavegen.rs
DesktopApp/BugBuster/src-tauri/src/la_decoders/: i2c.rs  mod.rs  spi.rs  tests.rs  uart.rs
DesktopApp/BugBuster/src/components/: channel_sparkline.rs  controls.rs  display.rs  layout.rs  mod.rs
DesktopApp/BugBuster/src/tabs/: adc.rs  board.rs  calibration.rs  diag.rs  din.rs  dout.rs  faults.rs  gpio.rs  hat.rs  hv_io.rs  idac.rs  iin.rs  ioexp.rs  la.rs  mod.rs  overview.rs  scope.rs  signal_path.rs  uart.rs  usbpd.rs  vdac.rs  voltages.rs  wavegen.rs
DesktopApp/BugBuster/tests/e2e/: README.md  fixtures.ts  package-lock.json  package.json  playwright.config.ts  tauri_mock.ts  tsconfig.json  wdio.conf.ts
DesktopApp/BugBuster/tests/e2e/specs/: 01_app_launch.spec.ts  02_connection_screen.spec.ts  02_la_performance.spec.ts  03_toast_system.spec.ts  04_la_10m_performance.spec.ts
Diag/: check_frozen.py  diag_la_streaming.py  full_usb_test.py  raw_usb_test.py  repro_0x11_debug.py  repro_five_cycles.py  repro_pytest_ordering.py  repro_suite_fail.py  repro_suite_fail_v2.py  stress_la_streaming.py  test_new_python_api.py
Docs/: ExternalBus.md  Hardware.md  LogicAnalyzer.md  MicroPython-Troubleshooting.md  QuickSetup.md  ReleaseChecklist.md  Scenarios.md  board_profiles.md  fix_plan_progress.md  hvpak-descriptor-validation.md  scripting-plan-v2.md
Docs/MicroPython Examples/: 01_hello.py  02_channel_voltage_sweep.py  03_channel_digital_io.py  04_i2c_scan.py  05_i2c_register_read.py  06_spi_flash_jedec_id.py  07_cooperative_sleep.py  08_autorun_blink.py  09_concurrent_devices.py  10_persistent_session.py  11_frozen_helpers.py  12_network_post.py  13_on_device_decorator.py  14_vfs_import.py  15_mcp4725_dac.py  README.md  repl.md  script-management.md
Firmware/: BugBusterProtocol.md  FirmwareStructure.md  HAT_Architecture.md  HAT_Protocol.md
Firmware/ESP32/: CMakeLists.txt  README.md  README_CALIBRATION.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3
Firmware/ESP32/components/micropython/: CMakeLists.txt  manifest.py  mpconfigport.h  mphalport.c  mphalport.h  qstrdefsport.h
Firmware/ESP32/components/micropython/shim/: poll.h
Firmware/ESP32/components/micropython/shim/sys/: statvfs.h
Firmware/NoOs/: ad74416h.h
Firmware/RP2040/: CMakeLists.txt  README.md
Firmware/RP2040/boards/: bugbuster_hat.h
Firmware/RP2040/cmake/specs/: nosys.specs
Firmware/RP2040/src/: bb_config.h  bb_hvpak.c  bb_hvpak.h  bb_la.c  bb_la.c.orig  bb_la.h  bb_la.pio  bb_la_rle.c  bb_la_rle.h  bb_la_trigger.pio  bb_la_usb.c  bb_la_usb.h  bb_main.c  bb_main_integrated.c  bb_pins.c  bb_pins.h  bb_power.c  bb_power.h  bb_protocol.c  bb_protocol.h  bb_swd.c  bb_swd.h  bb_tusb_config.h  bb_usb_descriptors.c  board_bugbuster_hat_config.h  probe_config.h  tusb_config.h
Firmware/esp32_ad74416h/: .gitignore  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3
Libs/: TPS74601PDRVT.IntLib
PCB Material/: ARCHITECTURE.md  Analog.SchDoc  BugBuster.BomDoc  BugBuster.PrjPcb  ESP32.SchDoc  IOs.SchDoc  USB.SchDoc  schematics.md
Project Outputs for BugBuster/: BugBuster.nsx  BugBusterBOM.csv  Design Rule Check - BugBusterMain.drc  Design Rule Check - BugBusterMain.html  Status Report.Txt
Scripts/: spi_sweep_20260329_231044.csv  test_hat_verify.py  test_la_bug2  test_la_bug2.rs  test_spi_clock_sweep.py
__Previews/: Analog.SchDocPreview  ESP32.SchDocPreview  IOs.SchDocPreview  Power.SchDocPreview  USB.SchDocPreview
data/: cacert.pem
docs/: knowledge.md
notebooks/: ESP32.ipynb  RP2040.ipynb  desktop_app_launcher.ipynb  esp32_flash.ipynb  esp32s3_flash_manager.ipynb  rp2040_firmware_build.ipynb  run_app.ipynb  setup_environment.ipynb  test_dashboard.ipynb
python/: README.md  pyproject.toml  setup.py
python/bugbuster/: __init__.py  bus.py  client.py  constants.py  hal.py  protocol.py  script.py
python/bugbuster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/bugbuster/transport/: __init__.py  http.py  usb.py
python/bugbuster_mcp/: README.md  __init__.py  __main__.py  config.py  safety.py  server.py  session.py
python/bugbuster_mcp/board_profiles/: NewBoard.json  stm32f4_discovery.json
python/bugbuster_mcp/prompts/: __init__.py  workflows.py
python/bugbuster_mcp/resources/: __init__.py  state.py
python/bugbuster_mcp/tools/: __init__.py  advanced.py  analog.py  bus.py  debug.py  digital.py  discovery.py  io_config.py  power.py  scripting.py  waveform.py
python/examples/: 01_hello_device.py  02_analog_io.py  03_adc_streaming.py  04_waveform_and_mux.py  05_hal_basics.py  05_power_management.py  06_power_management.py  07_digital_io.py
python/firmware_modules/: bb_devices.py  bb_helpers.py  bb_logging.py
tests/: .report.json  README.md  conftest.py  pytest.ini  report.html  reproduce_hat_desync.py  reproduce_hat_desync_with_capture.py  requirements-test.txt  run_tests.py  setup.sh
(+467 files in other folders)
