[package]
name = "bugbuster-ui"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlSelectElement",
    "HtmlInputElement",
    "Window",
    "Document",
    "DomRect",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "Element",
    "Navigator",
    "Clipboard",
    "KeyboardEvent",
] }
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
