[package]
name = "bugbuster"
version = "0.6.0"
description = "BugBuster desktop app — Tauri host for the BugBuster electronics debug platform: serial/USB transport to the ESP32-S3 + RP2040 HAT, logic analyzer streaming, AD74416H I/O control."
authors = ["Lorenzo Caradonna <swipeappstudio@gmail.com>"]
license = "MIT"
repository = "https://github.com/lollokara/BugBuster"
homepage = "https://github.com/lollokara/BugBuster"
edition = "2021"

[package.metadata]
release-date = "2026-04-27"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bugbuster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
async-trait = "0.1"
tauri-plugin-dialog = "2"
csv = "1"
chrono = "0.4"
libc = "0.2"
local-ip-address = "0.6"
futures = "0.3"
nusb = "0.1"                    # Raw USB for RP2040 LA vendor bulk endpoint

